# dnalang

./: .gitignore  .vercelignore  COMMAND_CENTER_GUIDE.md  README.md  dnalang_command_center.py  launch_command_center.sh  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
compiler/: Cargo.toml
compiler/src/: binding.rs  duality_pass.rs  lib.rs
compiler/src/ast/: crsm.rs  dna.rs  mod.rs
compiler/src/ir/: mod.rs  omega_ir.rs
components/: app-sidebar.tsx  quantum-dashboard.tsx
crsm7-engine/: Cargo.toml
crsm7-engine/src/: duality.rs  hamiltonian.rs  main.rs  mesh.rs  state.rs
docs/: CRSM7_SPECIFICATION.md  Z3BRAOS_SPECIFICATION.md
grammar/: 7dcrsm-lang.grammar  dna-lang.grammar
hooks/: use-agent-orchestration.ts  use-auth.ts  use-consciousness.ts  use-data-persistence.ts  use-dna-agents.ts  use-dna-compiler.ts  use-dna-runtime.ts  use-gvolution.ts  use-performance.ts  use-real-time-chat.ts
lib/: actions.ts  agent-orchestrator.ts  message-store.ts  monitoring-system.ts  security-utils.ts  websocket-manager.ts
orchestrator/: genetic-ai-orchestrator.js  simulated-dnalang-api.js
organisms/: CRSM7_Z3MESH.dna  UNIFIED_PLATFORM.dna  Z3BRAOS_QUANTUM_7D.dna
runtime/: Cargo.toml  dma_kernel.py  organism_runtime.py
runtime/src/: dual_runtime.rs  lib.rs
runtime/src/manifold/: crsm7.rs  mod.rs
runtime/src/organism/: executor.rs  mod.rs
runtime/src/projectors/: involution_j.rs  mod.rs  pi_minus.rs  pi_plus.rs
scripts/: 01-create-dna-organism-tables.sql  (+10 more)
(+90 files in other folders)
