[package]
name = "dnalang-compiler"
version = "3.1.0"
edition = "2021"
authors = ["ENKI-420 <enki420@dnalang.org>"]
description = "Compiler for dna::}{::lang and 7dCRSM::}{::lang with Ω_bind operator"
license = "MIT"
repository = "https://github.com/ENKI-420/dnalang"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "dnalang_compiler"
path = "src/lib.rs"
