[package]
name = "crsm7-engine"
version = "3.1.0"
edition = "2021"
authors = ["ENKI-420 <enki420@dnalang.org>"]
description = "7-dimensional Consciousness Resonance State Machine (CRSM7) with Z3 Mesh topology"
license = "MIT"
repository = "https://github.com/ENKI-420/dnalang"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "crsm7"
path = "src/main.rs"
